--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
   <!-- Responsive CSS -->
   <link rel="stylesheet" href="./src/assets/css/responsive.css">
 
+  <!-- Responsive SCSS -->
+  <link rel="stylesheet" href="./src/assets/css/responsive.scss">
+
   <title>Healthlink</title>
 </head>
 
