--- a/index.html
+++ b/index.html
@@ -12,34 +12,31 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-  <!-- Animate CSS -->
-  <link rel="stylesheet" href="./src/assets/css/animate.min.css">
-
-  <!-- Meanmenu CSS -->
-  <link rel="stylesheet" href="./src/assets/css/meanmenu.css">
-
   <!-- Fontawesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Nice Select CSS -->
-  <link rel="stylesheet" href="assets/css/nice-select.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css"
     integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Odometer CSS -->
-  <link rel="stylesheet" href="./src/assets/css/odometer.min.css">
-
-  <!-- Magnific CSS -->
-  <link rel="stylesheet" href="./src/assets/css/magnific-popup.min.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/themes/odometer-theme-default.min.css"
+    integrity="sha512-jHurNV8IL4Q4DRHzlRaIboSWZqnA3KU6KTiRQrtU+jxE1MHxdiveHrztuHhyna6PWTE427SxNDDUqjaruirB2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Carousel CSS -->
-  <link rel="stylesheet" href="./src/assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Carousel Default CSS -->
-  <link rel="stylesheet" href="./src/assets/css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
+    integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="./src/assets/css/style.css">
@@ -55,7 +52,9 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- Jquery Slim JS -->
-  <script src="./src/assets/js/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
@@ -69,35 +68,21 @@
     integrity="sha512-NqYds8su6jivy1/WLoW8x1tZMRD7/1ZfhWG/jcRQLOzV1k1rIODCpMgoBnar5QXshKJGV7vi0LXLNXPoFsM5Zg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <!-- Meanmenu JS -->
-  <script src="assets/js/jquery.meanmenu.js"></script>
-
   <!-- Nice Select JS -->
-  <script src="./src/assets/js/jquery.nice-select.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"
+    integrity="sha512-NqYds8su6jivy1/WLoW8x1tZMRD7/1ZfhWG/jcRQLOzV1k1rIODCpMgoBnar5QXshKJGV7vi0LXLNXPoFsM5Zg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- Odometer JS -->
-  <script src="./src/assets/js/odometer.min.js"></script>
-
-  <!-- Appear JS -->
-  <script src="./src/assets/js/jquery.appear.js"></script>
-
-  <!-- Datepicker JS -->
-  <script src="./src/assets/js/datepicker.min.js"></script>
-
-  <!-- Magnific JS -->
-  <script src="./src/assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js"
+    integrity="sha512-51WDTV7haD9BBDc8RWH2r5TnuSiRyAqEnbGyuKHYn+qpYCrCckxFeqlr1I5UoOULijyLV2vnHO9LS4MrAzHxwQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- Carousel JS -->
-  <script src="./src/assets/js/owl.carousel.min.js"></script>
-
-  <!-- Form Ajaxchimp JS -->
-  <script src="./src/assets/js/jquery.ajaxchimp.min.js"></script>
-
-  <!-- Form Validator JS -->
-  <script src="./src/assets/js/form-validator.min.js"></script>
-
-  <!-- Contact JS -->
-  <script src="./src/assets/js/contact-form-script.js"></script>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Custom JS -->
   <script src="./src/assets/js/main.js"></script>
